--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,12 +1,13 @@
 pipeline {
-     agent any
+     agent Windows_Node
      environment {
         dockerImage = ''
         registry = 'sumithpe/gadgets'
         DOCKERHUB_CREDENTIALS = credentials('dockerhub_id')
         PATH = "$PATH:/root/.dotnet/tools"
     }
-    stages {     
+    stages {
+    
 stage('Build Docker Images') {
             steps {
                 script {
@@ -33,7 +34,15 @@ stage('Upload to DockerHub'){
             sh 'docker container ls -a -fname=poc6gadgets -q | xargs -r docker container rm'
          }
        }
-       stage('Docker Run') {
+       stage('Docker Run MSSQL') {
+        steps {
+            script {
+                sh 'docker container start MSSQLLocalDB'
+                }
+            }
+        }
+        
+        stage('Docker Run') {
         steps {
             script {
                 sh 'docker container run -d -p 8000:80 --rm --name poc6gadgets sumithpe/gadgets'
