--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,7 +13,7 @@ stage('Build Docker Images') {
             steps {
                 script {
                     echo registry
-                    sh 'docker image build -t sumithpe/gadgets .\GadgetsOnline\'
+                    sh 'docker image build -t sumithpe/gadgets '.\GadgetsOnline\''
                 }
             }
         }
