--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,11 @@ pipeline {
     
 stage('Build Docker Images') {
             steps {
-                    docker image build -f ./GadgetsOnline/Dockerfile -t sumithpe/gadgets ./GadgetsOnline/
+            
+            script{
+                    sh 'docker image build -f ./GadgetsOnline/Dockerfile -t sumithpe/gadgets ./GadgetsOnline/'
+                    
+                    }
             }
         }
 stage('Upload to DockerHub'){
