--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,9 +15,9 @@ pipeline {
             steps {
             
             script{
-                    powershell 'cd GadgetsOnline/'
+                    
                     powershell 'SonarScanner.MSBuild.exe begin /k:"gadgetsonline" /d:sonar.host.url="http://20.21.98.133:9000" /d:sonar.login="sqp_ec9afd1e2591bbf36dd7749b102baeaa59b1d629"'
-                    powershell 'MsBuild.exe /t:Rebuild'
+                    powershell 'cd /GadgetsOnline/ && MsBuild.exe /t:Rebuild'
                     }
             }
         }
