--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
         registry = 'sumithpe/gadgets'
         DOCKERHUB_CREDENTIALS = credentials('dockerhub_id')
         Path = "%PATH%;C:\\Program Files\\SonarScanner\\sonar-scanner-msbuild-5.13.0.66756-net46;C:\\Windows\\System32\\WindowsPowerShell\\v1.0;C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\MSBuild\\Current\\Bin;C:\\Program Files\\Docker\\Docker\\resources\\bin"
-        
+        JAVA_HOME = "C:\Program Files\Java\jdk-17"
     }
     stages {
     
